# NLP_VIsion_Auto_Bug_Reporter

./: AGENTS.md  README.md  compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/api/: __init__.py  server.py
app/capture/: buffer.py  capture.py
app/config/: detectors.yaml  load.py  settings.yaml
app/dashboard/: index.html
app/detectors/: base.py  blank.py  flicker.py  freeze.py  pipeline.py  utils.py
app/nlp/: summarizer.py  templates.py
app/reporter/: cli.py  exporter.py
app/schemas/: __init__.py  models.py  types.py
app/storage/: artifacts.py  db.py  models.py  repo.py
datasets/: __init__.py  config.py  config.yaml
datasets/loaders/: atari_loader.py  echo_loader.py
docker/: Dockerfile  compose.yaml
scripts/: demo_e2e.py  generate_synthetic_anomalies.py
tests/: conftest.py  test_blank.py  test_datasets.py  test_schemas.py  test_synthetic_script.py
tests/integration/: test_artifacts_clip_creation.py  test_e2e_synthetic.py  test_pipeline_artifacts.py  test_reporter_cli.py  test_reporter_cli_defaults.py
tests/unit/: test_api_health.py  test_api_server.py  test_artifacts_fallback.py  test_blank.py  test_buffer.py  test_config_env.py  test_datasets_config_env.py  test_datasets_config_yaml.py  test_docker_compose.py  test_exporter_csv.py  test_flicker.py  test_freeze.py  test_pipeline_dedup.py  test_pipeline_order.py  test_settings_yaml.py  test_storage_repo.py  test_summarizer.py
