[project]
name = "fc25-bugbot"
version = "0.1.0"
description = ""
authors = [
    {name = "Codex",email = "codex@openai.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "opencv-python-headless (>=4.12.0.88,<5.0.0.0)",
    "numpy (>=2.2,<3.0)",
    "scikit-image (>=0.25.2,<0.26.0)",
    "pytesseract (>=0.3.13,<0.4.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "mss (>=9.0.1,<10.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "pillow (>=10.4.0,<11.0.0)"
]


[project.optional-dependencies]
ml = ["torch (>=2.8.0,<3.0.0) ; python_version >= \"3.11\" and python_version < \"3.14\""]
llm = ["llama-cpp-python (>=0.3.16,<0.4.0)"]
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.17.1"
pytest-asyncio = "^1.1.0"

